<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_app">
        <item
            android:id="@+id/item_apps"
            android:title="@string/apps"
            android:icon="@drawable/ic_apps" />
        <item
            android:id="@+id/action_stats"
            android:title="@string/stats"
            android:icon="@drawable/ic_stacked_bar_chart" />
        <item
            android:id="@+id/tls_decryption"
            android:title="@string/decryption_rules"
            android:icon="@drawable/ic_lock_open_alt" />
        <item
            android:id="@+id/firewall"
            android:title="@string/firewall"
            android:icon="@drawable/ic_shield" />
        <item
            android:id="@+id/malware_detection"
            android:title="@string/malware_detection"
            android:icon="@drawable/ic_bug" />
        <item
            android:id="@+id/open_log"
            android:title="@string/app_log"
            android:icon="@drawable/ic_text_snippet" />
    </group>
</menu>